--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=123
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
+## PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/pilotosqlapp
+spring.datasource.username=postgres
+spring.datasource.password=password
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto= update
+
+# App Properties
+pilotosqlapp.app.jwtSecret= bezKoderSecretKey
+pilotosqlapp.app.jwtExpirationMs= 86400000
+
