--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,7 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-
+<!--
 	<build>
 		<plugins>
 			<plugin>
@@ -109,7 +109,7 @@
 					<imageName>autenticacao</imageName>
 					<baseImage>java:8</baseImage>
 					<entryPoint>["java", "-jar", "/${project.build.finalName}.jar"]</entryPoint>
-					<!-- copy the service's jar file from target into the root directory of the image -->
+					&lt;!&ndash; copy the service's jar file from target into the root directory of the image &ndash;&gt;
 					<resources>
 						<resource>
 							<targetPath>/</targetPath>
@@ -124,6 +124,6 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
-	</build>
+	</build>-->
 
 </project>
